syntax = "proto3";
package admin;
option go_package = "go-ecommerce/proto/admin";

service AdminService {
  // --- 数据大屏 ---
  rpc GetDashboardStats(StatsRequest) returns (StatsResponse);
  
  // --- 用户管理 ---
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc ToggleUserStatus(ToggleStatusRequest) returns (ToggleStatusResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // --- 商品管理 ---
  rpc ListAllProducts(ListAllProductsRequest) returns (ListAllProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  
  // --- 订单管理 ---
  rpc ShipOrder(ShipOrderRequest) returns (ShipOrderResponse);
}

// 消息定义
message StatsRequest {}

message StatsResponse {
  float total_sales = 1;
  int32 order_count = 2;
  int32 user_count = 3;
  int32 product_count = 4;
  repeated CategoryStat category_stats = 5; // 品类占比
  repeated TrendStat sales_trend = 6;       // 销售趋势
  float actual_sales = 7; // 实际成交额 (已支付)
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message UserInfo {
  int64 id = 1;
  string username = 2;
  string nickname = 3;
  string mobile = 4;
  string role = 5;
  bool is_disabled = 6;
  string created_at = 7;
}

message ListUsersResponse {
  repeated UserInfo users = 1;
  int32 total = 2;
}

message ToggleStatusRequest {
  int64 user_id = 1;
  bool disabled = 2;
}

message ToggleStatusResponse { bool success = 1; }

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListAllProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message AdminProductInfo {
  int64 id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
}

message ListAllProductsResponse {
  repeated AdminProductInfo products = 1;
  int32 total = 2;
}

message UpdateProductRequest {
  int64 id = 1;
  float price = 2;
  int32 stock = 3;
}

message UpdateProductResponse { bool success = 1; }

message ShipOrderRequest { string order_no = 1; }
message ShipOrderResponse { bool success = 1; }

message CategoryStat {
  string name = 1;
  int32 value = 2;
}

message TrendStat {
  string date = 1;
  float amount = 2;
}